vistas mejoradas y registros