@@ -1,6 +1,7 @@
 package com.panaderiafx.controllers;
 
 import com.panaderiafx.controllers.components.TablaInteractiva;
+import com.panaderiafx.utils.RelacionadorVisual;
 import com.panaderiafx.utils.VerUtils;
 import javafx.scene.control.ScrollPane;
 import javafx.scene.control.Label;
@@ -9,36 +10,46 @@ import javafx.geometry.Insets;
 import javafx.geometry.Pos;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class VerController {
 
     public static ScrollPane mostrar(String nombreTabla) {
-        return mostrar(nombreTabla, null);
+        return mostrar(nombreTabla, nombreTabla, null);
     }
 
-    public static ScrollPane mostrar(String nombreTabla, List<String> columnasOcultas) {
-        // ✅ Leer directamente desde Excel SIEMPRE
-        List<Map<String, String>> datos = VerUtils.verTabla(nombreTabla);
+    public static ScrollPane mostrar(String nombreTabla, String nombreVisible) {
+        return mostrar(nombreTabla, nombreVisible, null);
+    }
 
-        if (datos.isEmpty()) {
-            VBox vacio = new VBox(new Label("No hay datos en la tabla: " + nombreTabla));
+    public static ScrollPane mostrar(String nombreTabla, String nombreVisible, List<String> columnasOcultas) {
+        List<Map<String, String>> datosOriginales = VerUtils.verTabla(nombreTabla);
+
+        if (datosOriginales.isEmpty()) {
+            VBox vacio = new VBox(new Label("No hay datos en la tabla: " + nombreVisible));
             vacio.setStyle("-fx-alignment: center; -fx-padding: 20px;");
             return new ScrollPane(vacio);
+        }
+
+        List<Map<String, String>> datos = datosOriginales;
+
+        Set<String> tablasConVista = new HashSet<>(List.of(
+                "RecetasIngredientes", "Producción", "Costos", "TabladeConversión"
+        ));
+
+        if (tablasConVista.contains(nombreTabla)) {
+            datos = RelacionadorVisual.aplicarSustituciones(nombreTabla, datosOriginales);
         }
 
         Set<String> todas = datos.get(0).keySet();
         List<String> columnasVisibles = columnasOcultas == null
                 ? new ArrayList<>(todas)
-                : todas.stream()
-                       .filter(c -> !columnasOcultas.contains(c))
-                       .collect(Collectors.toList());
+                : todas.stream().filter(c -> !columnasOcultas.contains(c)).toList();
 
-        TablaInteractiva tablaView = new TablaInteractiva(datos, columnasVisibles, 20);
+        TablaInteractiva tablaView = new TablaInteractiva(datos, columnasVisibles, 20, nombreTabla);
         tablaView.setAncho(-1);
         tablaView.setAlto(-1);
 
-        Label titulo = new Label("Tabla - " + traducirNombreTabla(nombreTabla));
+        Label titulo = new Label("Tabla - " + nombreVisible);
         titulo.setStyle("-fx-font-size: 24px; -fx-font-weight: bold;");
         titulo.setMaxWidth(Double.MAX_VALUE);
         titulo.setAlignment(Pos.CENTER);
@@ -52,19 +63,5 @@ public class VerController {
         scroll.setFitToWidth(true);
         scroll.setFitToHeight(true);
         return scroll;
-    }
-
-    private static String traducirNombreTabla(String tabla) {
-        return switch (tabla.toLowerCase()) {
-            case "ingredientes" -> "Ingredientes";
-            case "recetas" -> "Recetas";
-            case "produccion" -> "Producción";
-            case "costos" -> "Costos";
-            case "tasacambio" -> "Tasa de Cambio";
-            case "historial de precios" -> "Historial de Precios";
-            case "parametros" -> "Parámetros";
-            case "tabladeconversión" -> "Tabla de Conversión";
-            default -> tabla;
-        };
     }
 }
